@@ -1,3 +1,8 @@
+2022-09-21 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/z80/peep.c:
+	  Handling of immediates in canAssign for z80 and related.
+
 2022-09-20 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/z80/peeph.def: fixed rules 85a, 85b to fix bug #3486,
